# dde-kwin

./: CMakeLists.txt
configures/: kwin_no_scale.in  kwinrulesrc
debian/: changelog
deepin-watermark-dbus/: CMakeLists.txt  deepinwatermark.cpp  deepinwatermark.h
deepin-wm-dbus/: com.deepin.wm.xml.in  deepinwmfaker.cpp  deepinwmfaker.h
plugins/kdecoration/: chameleon.cpp  chameleon.h  chameleonbutton.cpp  chameleonconfig.cpp  chameleonconfig.h
plugins/kwineffects/: CMakeLists.txt
plugins/kwineffects/multitasking/: CMakeLists.txt  DeepinDesktopThumbnail.qml  DeepinWindowThumbnail.qml  backgroundimageprovider.cpp  backgroundimageprovider.h  data.qrc  imageprovider.cpp  main.qml  multitasking.cpp  multitasking.h  multitasking_model.cpp  multitasking_model.h  thumbmanager.qml  windowinfo.cpp  windowinfo.h  windowthumbnailimageprovider.cpp  windowthumbnailimageprovider.h
plugins/kwineffects/open-window/: CMakeLists.txt  main.cpp  open-window.cpp  open-window.h  open-window.json
plugins/kwineffects/scissor-window/: main.cpp  scissorwindow.cpp  scissorwindow.h
plugins/kwineffects/switch-window/: CMakeLists.txt  main.cpp  switch-window.cpp  switch-window.h  switch-window.json
